--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RAIN SUN | Timeless Clothing For Him and For Her | Made in GJ</title>
+    <title>RAIN SUN | Timeless Clothing For Him and For Her | Made in LM</title>
     <link rel="stylesheet" href="css/home.css">
 
 
@@ -131,11 +131,11 @@
     </section>
 
     <section class="collection-container">
-        <a href="#" class="collection">
+        <a href="/women" class="collection">
             <img src="img/women-collection.png" alt="">
             <p class="collection-title">women <br> apparels</p>
         </a>
-        <a href="#" class="collection">
+        <a href="/men" class="collection">
             <img src="img/men-collection.png" alt="">
             <p class="collection-title">men <br> apparels</p>
         </a>
@@ -264,13 +264,10 @@
     <footer></footer>
 
     <script src="js/nav.js"></script>
-    <script src="js/nav.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/home.js"></script>
 </body>a href="#" class="footer-link">
 </html>
-
-
 
 
 <!--https://www.youtube.com/watch?v=0-NF3JMs4E8&list=PLqm86YkewF6S45smPYeNv01aFFKWZSgYD&index=1-->
