--- a/public/product.html
+++ b/public/product.html
@@ -20,7 +20,7 @@
         </div>
         <div class="details">
             <h2 class="product-brand">calvin klein</h2>
-            <p class="product-short-des">Paragraphs are usually represented in visual media as blocks of text separated from adjacent blocks by blank lines and/or first-line indentation</p>
+            <p class="product-short-des">Calvin Klein Men's Chill Short Sleeve Crew Neck</p>
             <span class="product-price">$99</span>
             <span class="product-actual-price">$200</span>
             <span class="product-discount">( 50% off )</span>
@@ -44,11 +44,17 @@
 
     <section class="detail-des">
         <h2 class="heading">description</h2>
-        <p class="des">The HTML  element represents a paragraph. Paragraphs are usually represented in visual media as blocks of text separated from adjacent blocks by blank lines and/or first-line indentation, but HTML paragraphs can be any structural grouping of related content, such as images or form fields.
-        Paragraphs are block-level elements , and notably will automatically close if another block-level element is parsed before the closing tag. See "Tag omission" below
-            The HTML  element represents a paragraph. Paragraphs are usually represented in visual media as blocks of text separated from adjacent blocks by blank lines and/or first-line indentation, but HTML paragraphs can be any structural grouping of related content, such as images or form fields.
-            Paragraphs are block-level elements , and notably will automatically close if another block-level element is parsed before the closing tag.</p>
-
+        <p class="des">About this item
+            <ul class="des">
+                <li>60% Cotton, 40% Polyester</li>
+                <li>Imported</li>
+                <li>Pull On closure</li>
+                <li>Machine Wash</li>
+                <li>Iconic Calvin Klein logo print for a classic, signature design.</li>
+                <li>Ideal for low-impact workouts, yoga or lounging around</li>
+                <li>Plush cotton knit blend for premium comfort and a lightweight hand</li>
+                <li>Slim fit - narrow through the arms with fitted shaping around the body</li>
+            </ul>
     </section>
     <!-- card - container -->
     <section class="product">
