--- a/public/women.html
+++ b/public/women.html
@@ -2,16 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Page not found - User Lost</title>
+    <title>Men</title>
 
   <link rel="stylesheet" href="css/home.css">
+<!-- ***************************   -->
   <link rel="stylesheet" href="css/404.css">
 
 </head>
 <body>
     <nav class="navbar"></nav>
-    <img src="img/404.png" class="four-0-four-image" alt="">
-    <p class="four-0-four-msg">looks like you are lost. Head to back to our <a href="/">homepage</a></p>
+    <img src="img/card1.png" class="four-0-four-image" alt="">
+    <p class="four-0-four-msg">Collection for women</p>
+
+    <footer></footer>
     <script src="js/nav.js"></script>
+    <script src="js/footer.js"></script>
 </body>
 </html>
