--- a/public/checkout.html
+++ b/public/checkout.html
@@ -17,7 +17,7 @@
     <nav class="navbar"></nav>
 
     <div class="alert-box">
-        <img src="img1/error.png" class="alert-img" alt="">
+<!--        <img src="img/error.png" class="alert-img" alt="">-->
         <p class="alert-msg"></p>
     </div>
 
@@ -44,10 +44,10 @@
             </div>
         </div>
         <div class="checkout-section">
-            <div class="checkout-box">
+            <div class="checkout-box">git
                 <p class="text">your total bill, </p>
                 <h1 class="bill">$00</h1>
-                <button class="place-order-btn">place order</button>
+                <button class="place-order-btn" onclick="window.location.href = '/mail'">place order</button>
             </div>
         </div>
     </div>
@@ -55,7 +55,7 @@
     <script src="js/nav.js"></script>
     <script src="js/home.js"></script>
     <script src="js/cart.js"></script>
-    <script src="js/token.js"></script>
+<!--    <script src="js/token.js"></script>-->
 
 </body>
 </html>
